# agent-learn-flow

./: README.md  大模型应用开发_Python学习路线.md  学习进度记录.md
knowledgeflow-copilot/: .env.example  .gitignore  README.md  pyproject.toml
knowledgeflow-copilot/app/: __init__.py  main.py  schemas.py
knowledgeflow-copilot/app/api/: routes.py
knowledgeflow-copilot/app/core/: config.py  logging.py
knowledgeflow-copilot/app/llm/: client.py
knowledgeflow-copilot/lessons/: 01_fastapi_pydantic.md  02_llm_client.md  03_structured_output.md  04_provider_switching_deepseek.md
knowledgeflow-copilot/tests/: conftest.py  test_api.py
